2001-03-18  Dave Peticolas  <dave@krondo.com>

	* AUTHORS: update author info

	* doc/sgml/C/xacc-about.sgml: update author info

	* src/gnome/top-level.c: add VERSION arg to gnome_init

2001-03-16  Rob Browning  <rlb@cs.utexas.edu>

	* src/scm/utilities.scm
	(item-list->hash!): new - fancy (possibly over-customizable)
	list->hash converter function.
	(filteroutnulls): simplify via SRFI-1.
	(flatten): speedup - avoid intermediate appends.
	(striptrailingwhitespace): speedup - avoid intermediate substrings.
	(string-join): speedup - (maybe), trade string-appends for conses.

	* src/scm/process.scm
	(gnc:run-sub-process): renamed from run-sub-process.
	(gnc:cleanup-sub-process): new - take various steps to make sure
	we don't leave a zombie lying around.

	* src/scm/price-quotes.scm: substantial rework - now much smarter,
	though still a bit too obfuscated.

	* src/scm/engine-utilities.scm: various cleanups, speedups, and
	new functions.
	(gnc:filename->book): deleted.
	(gnc:call-with-account-data-from-file): deleted.
	(gnc:url->loaded-book): new function.

	* src/scm/command-line.scm (gnc:*arg-defs*): add
	--add-price-quotes option.

	* src/quotes/finance-quote-helper.in: new file - renamed from
	price-quote-helper.in.

	* src/quotes/README: various updates.

	* src/quotes/Quote_example.pl: document that we *don't* use the
	"fetch" method in gnucash.

	* src/quotes/gnc-prices: new file -- replaces gnc-prices.in and is
	now just a wrapper for "gnucash --add-price-quotes".

	* src/quotes/Makefile.am: accomodated renaming of
	price-quote-helper to finance-quote-helper.  Also moved
	finance-quote-helper to GNC_SHAREDIR from pkgdatadir.
	(gncsharedir): grab GNC_SHAREDIR.
	(gncshare_SCRIPTS): put finance-quote-helper in GNC_SHAREDIR.

	* src/guile/gnc.gwp: wraped new quote timezone API.  Added new
	gnc-book wrappers and new pricedb wrappers -- still not finished.

	* src/gnome/gnc-dialogs.glade: add quote timezone menu.
